<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Speedometer</string>
    <string name="settings_units_title">Units</string>
    <string name="settings_maxdisplayspeed_title">Max Display Speed</string>
    <string name="settings_scaletextsize_title">Numbers size</string>
    <string name="settings_showseconds_title">Show Seconds</string>
    <string name="settings_showmeters_title">Show Meters/Feets</string>
    <string name="settings_showactionbar_title">Show Action Bar</string>
    <string name="settings_exportbutton_title">Export triplog to SD-card (CSV file)</string>
    <string name="settings_share_title">Share</string>
    <string name="settings_rate_title">Rate App</string>
    <string name="settings_feedback_title">Send Email Feedback</string>
    <string name="settings_siteurl">Project Page</string>
    <string name="settings_hint_title">Help</string>
    <string name="settings_about_title">About</string>
    <string name="kmh">km/h</string>
    <string name="mph">mph</string>
    <string name="km">km</string>
    <string name="mi">mi</string>
    <string name="m">m</string>
    <string name="ft">ft</string>
    <string name="tracklist_total">TOTAL</string>
    <string name="tracklist_current">CURRENT</string>
    <string name="tracklist_start">START</string>
    <string name="dialog_rename">Rename</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="menu_rename">Set Track Name</string>
    <string name="menu_delete">Delete Track</string>
    <string name="menu_rename1">Set Subtrack Name</string>
    <string name="menu_delete1">Delete Subtrack</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_tracklist">Trip Meter Log</string>
    <string name="menucat_common">Common</string>
    <string name="menucat_speedometer">Speedometer Display</string>
    <string name="menucat_tripmeter">Trip Meter Display</string>
    <string name="menucat_tripmeterlog">Trip Meter Log</string>
    <string name="menucat_about">About / Help</string>
    <string name="servicenotification1">GPS Trip Meter</string>
    <string name="servicenotification2">Speedometer Service</string>
    <string name="gpswarnmessage">Your GPS seems to be disabled, show settings dialog to enable it?</string>
    <string name="ratedialog1">Please take a moment to rate this speedometer&#8230;</string>
    <string name="ratedialog2">Rate This App</string>
    <string name="ratedialog3">Never Ask</string>
    <string name="ratedialog4">Ask Later</string>
    <string name="menu_speedometer_startmeter">Start Trip Meter</string>
    <string name="menu_speedometer_stopmeter">Stop Trip Meter</string>
    <string name="menu_speedometer_newsubtrack">New Subtrack</string>
    <string name="menu_speedometer_pathmode">Change Display Mode</string>
    <string name="menu_speedometer_tripmeterlog">Trip Meter Log...</string>
    <string name="menu_speedometer_settings">Settings...</string>
    <string name="menu_speedometer_hint">Help</string>
    <string name="na">N/A</string>
    <string name="menu_speedometer_gpsinfo">Sats: %d, Accuracy: %s</string>
    <string name="menu_speedometer_gpsinfo_ver">GPS Accuracy: %s</string>
    <string name="menucat_colors">Colors</string>
    <string name="settings_showcolorsbutton">Open Color List...</string>
    <string name="settings_resetcolorsbutton">Reset Colors</string>
    <string name="color_hand">Needle</string>
    <string name="color_containerbg">Background</string>
    <string name="color_facebg">Faceplate</string>
    <string name="color_rimshadow">Rim Shadow</string>
    <string name="color_riminner">Inner Rim</string>
    <string name="color_rimouter">Outer Rim</string>
    <string name="color_scale1">Major Ticks</string>
    <string name="color_scale2">Minor Ticks</string>
    <string name="color_scaletext">Scale Text</string>
    <string name="color_center1">Center 1</string>
    <string name="color_center2">Center 2</string>
    <string name="color_unitstext">Units Text</string>
    <string name="menu_showbuttonicons">Show Button Icons</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_standbymodeenabled">Standby Timer enabled</string>
    <string name="settings_fullscreenlandscape">Fullscreen Landscape</string>
    <string name="speedometergpspermission_button1">Show Permissions Dialog</string>
    <string name="speedometergpspermission_button2">Not now</string>
    <string name="speedometergpspermission">"Location" permission need to be granted</string>
    <string name="servicegppermission">Tripmeter not started: "Location" permission required</string>
    <string name="servicegpsnotenabled">Tripmeter not started: GPS must be enabled in system settings</string>
    <string name="standbytext">Standby</string>
    <string name="settings_needlemovement">Needle Movement</string>

    <string name="iconrec1" translatable="false">&#x25CB;</string>
    <string name="iconrec2" translatable="false">&#x25CF;</string>
    <string name="iconset1" translatable="false">&#x25B3;</string>
    <string name="iconset2" translatable="false">&#x25B2;</string>

    <string name="menucat_additional">Additional</string>
    <string name="settings_hwaccel_title">Hardware accelerated rendering</string>
    <string name="settings_lang_title">Language Override</string>
    <string name="message_applylanguage">To apply change: remove the app from Recents List or just restart your device</string>
    <string name="message_resetcolors">Press on \"Open Color List\" first</string>
    <string name="settings_colorpresets">Update Color Preset...</string>
    <string name="colorpresetsdialogtitle">Press on any preset to save the current colors to it</string>
    <string name="message_presetupdated">Preset \"%s\" updated</string>
    <string name="menu_speedometer_colorlist">Color Presets</string>
    <string name="menu_colorsettings">Customization...</string>
    <string name="menu_speedometer_autotoggle">Autotoggle</string>
    <string name="settings_colorautotoggle">Autotoggle\'s Light Sensivity</string>
    <string name="settings_autotogglesummary">When the illuminance is %s lux or more, Preset #1 will be turned on, otherwise - Preset #2</string>
    <string name="settings_rgbpicker_title">Hex Input in Color Picker</string>
    <string name="settings_showspeedstats">Show Avg and Max Speed</string>
    <string name="settings_showmovementtime">Time is movement based</string>
    <string name="settings_showmovementspeed">Avg Spd is movement based</string>
    <string name="listmenustats_time">"Total Time: "</string>
    <string name="listmenustats_movingtime">"Moving Time: "</string>
    <string name="listmenustats_distance">"Distance: "</string>
    <string name="listmenustats_avgspeed">"Avg Speed: "</string>
    <string name="listmenustats_avgmovingspeed">"Avg Moving Speed: "</string>
    <string name="listmenustats_maxspeed">"Max Speed: "</string>
    <string name="menu_speedometer_lightsensorinfo">lux: %f</string>
    <string name="message_ringtonenotfound">Error loading sound: %s</string>
    <string name="menu_speedalerts">Speed Alerts</string>
    <string name="menu_speedalerts2">Speed Alerts</string>
    <string name="menu_speedalertssettings">Configure...</string>
    <string name="settings_speedalertsprofile1">Profile 1</string>
    <string name="settings_speedalertsprofile2">Profile 2</string>
    <string name="settings_speedalertsprofile3">Profile 3</string>
    <string name="settings_speedalertsspeed1">When the speed is above...</string>
    <string name="settings_speedalertssound1">...play the sound:</string>
    <string name="settings_speedalertscolor1">...toggle the color preset:</string>
    <string name="settings_speedalertsspeed2">When the speed is below...</string>
    <string name="settings_speedalertssound">When returned to normal speed - play the sound:</string>
    <string name="settings_speedalertsrepeat">Repeat Sound:</string>
    <string name="settings_speedalertsdelay">Alerting Delay:</string>
    <string name="settings_speedalertsprofiles">Alert Profiles...</string>
    <string name="speedalertsmessage">Speed Alerts may not always be triggered. Proper functioning is primarily dependent on GPS. Also, notifications may not be triggered if the screen is off or the application is in the background mode.</string>
    <string name="settings_speedalertsmessage">Note about Speed Alerts...</string>
    <string name="colorpresetsmessage">These color values can be automatically overwritten with other values at any anytime - you can save the current colors by clicking on Update Color Preset button, and later restore them if nessesary</string>
    <string name="settings_colorpresetsmessage">Note...</string>
    <string name="settings_tuning">Parameter tuning...</string>
    <string name="settings_speedalertsprofile">Active Profile</string>
    <string name="settings_autopathevery">New Subtrack every...</string>
    <string name="settings_autopathsound">Play sound on new Subtrack:</string>
    <string name="message_lightsensorerror">Light sensor not found</string>
    <string name="settings_autopath">Automatically create Subtrack...</string>
    <string name="tripmeter_accuracywarning">" ACCURACY: %s"</string>
    <string name="message_buttontip">This button marks a new Subtrack, it only works when Trip Meter is running. Also you can press and hold to open Subtrack Autocreation Settings</string>
    <string name="settings_distdecimals">Decimal Places of Km/Mi</string>
    <string name="message_examples">Examples</string>
    <string name="menucat_odometer">Odometer</string>
    <string name="settings_odometerenabled">Enabled</string>
    <string name="settings_odometerdistval">Current Value...</string>
    <string name="speedometergpspermission1">For the speedometer and tripmeter to work, the app needs access to the location of this device. When the tripmeter is running, location data will also be read if the application is in the background, closed or not in use. Only speed and distance data are taken into account, the rest of the location data is not processed by the app. Allow the app to access GPS location data.</string>

</resources>
